--- a/style.css
+++ b/style.css
@@ -4,23 +4,26 @@ body{
 *{
     margin: 0;
     padding: 0;
+    
 }
 
-nav{
-    
+nav{    
     display: flex;
     justify-content: space-between;
-    width: 100%;
+    width: 95%;
     margin-top: 3rem;
-    margin-left: 1rem;
-    margin-right: 1rem;
+    margin-left: 2.5%;
     background-color: rgba(54, 54, 209, 0.545);
 }
 
 ul{
-    list-style: none;
-    
+    list-style: none;    
     display: flex;
+}
+
+.second{
+    margin-left: 1rem;
+}
     
 
 
